# glcontrol

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-format.yaml  run-tests.yaml
samples/: dumpster.yaml  just-camera.yaml  officedoor-open.yaml
src/glcontrol/: cli.py  conductor.py  runner.py
src/glcontrol/cfgtools/: base.py  specs.py
src/glruntime/: conductor.py  control_loop.py  notifications.py
tests/: test_cli.py  test_import.py  test_parse_samples.py  test_varsub.py
tests/bad-samples/: README.md  bad-camera-contents.yaml  bad-missing-spec.yaml
tests/bad-samples/skip/: incomplete-camera.yaml
