[tool.poetry]
name = "glcontrol"
version = "0.1.0"
description = "Control Loop for Groundlight"
authors = ["Groundlight <info@groundlight.ai>"]
license = "MIT"
readme = "README.md"
packages = [
    { from = "src", include = "glcontrol" }
]

[tool.poetry.dependencies]
python = "^3.8"
groundlight = "^0.13.2"
framegrab = "^0.4.4"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^22.12.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.black]
line-length = 120
preview = true
target-version = ["py311"]

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# This defines the CLI command `glcontrol` and its python entrypoint
glcontrol = "glcontrol.cli:climain"