[tool.poetry]
name = "glcontrol"
version = "0.1.2"
description = "Control Loop for Groundlight"
authors = ["Groundlight <info@groundlight.ai>"]
license = "MIT"
readme = "README.md"
packages = [
    { from = "src", include = "glcontrol" }
]

[tool.poetry.dependencies]
python = "^3.8"
groundlight = "^0.17.0"
framegrab = ">=0.5.0"
typer = "^0.12.3"
pydantic = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^22.12.0"
ruff = "^0.2.1"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.black]
line-length = 120
preview = true
target-version = ["py311"]

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
select = ["E", "F", "I", "N", "PL", "UP"] # https://beta.ruff.rs/docs/rules/
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# This defines the CLI command `glcontrol` and its python entrypoint
glcontrol = "glcontrol.cli:climain"

[tool.pylint."MESSAGES CONTROL"]
disable = "W1203, W1514, C0114"